# trustgate-onboarding

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/api/: document_routes.py
backend/core/: config.py  database.py  encryption.py  extractor.py  file_security.py  forgery_detector.py  logger.py
frontend/: Dockerfile
frontend/src/: App.jsx
frontend/src/components/: AdminDashboard.jsx  FileUpload.jsx
